Revise project descriptions and titles
Updated project details in the portfolio section.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
 
         <article class="card">
           <h2 class="card__title">Projects</h2>
-          <p class="muted">Add your best 2–4 projects here (even small ones). Example layout below:</p>
 
           <div class="projects">
             <div class="project">
@@ -123,13 +122,13 @@
 
             <div class="project">
               <div class="project__top">
-                <h3 class="h3">Add Another Project</h3>
+                <h3 class="h3">My Portfolio</h3>
                 <span class="pill">Java</span>
               </div>
               <p class="muted">
-                Briefly describe what you built, what you learned, and what problem it solves.
+                Im currently building my portfolio to showcase my skills in full-stack developement.
               </p>
-              <div class="project__links">
+              <div class="https://jasments.github.io/Jasmin-s-Portfolio/">
                 <a href="#" aria-disabled="true" class="disabled">Repo</a>
               </div>
             </div>
